# barcode-generator

./: pyproject.toml
src/barcode_generator/: main.py
src/barcode_generator/settings/: settings.json
